# midnight-state-sync

./: .env.example  .gitignore  Cargo.toml  Midnight_wallet_specification.md  README.md
src/: main.rs
src/indexer/: client.rs  mod.rs  types.rs
src/transaction/: builder.rs  mod.rs
src/transaction/generator/midnight/: address.rs  mod.rs  remote_prover.rs  sender.rs
src/utils/: index.rs  mod.rs
src/wallet/: legacy_sync.rs  mod.rs  sync.rs  types.rs
src/wallet/sync/: events.rs  merkle_update_service.rs  mod.rs  orchestrator.rs  progress_tracker.rs  repositories.rs  state_persistence.rs  strategies.rs  transaction_processor.rs
